--- a/.travis.yml
+++ b/.travis.yml
@@ -4,28 +4,25 @@ php:
   - 5.3
 
 env:
-  # trunk:
   - WP_VERSION=master WP_MULTISITE=0
 
 matrix:
   fast_finish: true
 
 before_install:
+  - pip install --user codecov
   # set up WP install
   - export WP_DEVELOP_DIR=/tmp/wordpress/
   - mkdir -p $WP_DEVELOP_DIR
   - git clone --depth=1 git://develop.git.wordpress.org/ $WP_DEVELOP_DIR
   # set up tests config
   - cd $WP_DEVELOP_DIR
-  - echo $WP_DEVELOP_DIR
-  - git fetch --tags && git checkout $WP_VERSION
   - cp wp-tests-config-sample.php wp-tests-config.php
   - sed -i "s/youremptytestdbnamehere/wordpress_test/" wp-tests-config.php
   - sed -i "s/yourusernamehere/root/" wp-tests-config.php
   - sed -i "s/yourpasswordhere//" wp-tests-config.php
   # set up database
   - mysql -e 'CREATE DATABASE wordpress_test;' -uroot
-  - cd $TRAVIS_BUILD_DIR
 
 install:
   - git config --global user.email "tom@hmn.md"
@@ -36,13 +33,10 @@ notifications:
 
 script:
   - cd $TRAVIS_BUILD_DIR
-  - |
-    phpunit --coverage-clover=coverage.clover
+  - phpunit
 
-after_script:
-  - |
-      wget https://scrutinizer-ci.com/ocular.phar
-      php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+after_success:
+  - codecov
 
 git:
   depth: 1
